SalesforceProject2/src/objects/UnfollowQueue__c.object
<CustomObject>
    <description>EDIT AT YOUR OWN RISK.

This object stores all records that are scheduled to be unfollowed in a future date.  Editing any records may break the application.</description>
    <fields>
        <fullName>CriteriaMetDate__c</fullName>
        <description>This is the date that the record was queued up for unfollowing.  It is equal to the LastUpdatedDate of the record to ensure a clean value for most cases.</description>
        <label>CriteriaMetDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysDelay__c</fullName>
        <description>This is the number of days after the criteriaMetDate when all followers will be removed from the recordId specified</description>
        <label>DaysDelay</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScheduledUnfollowDate__c</fullName>
        <formula>CriteriaMetDate__c +DaysDelay__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ScheduledUnfollowDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>recordId__c</fullName>
        <description>Id of the record to be unfollowed at a later date</description>
        <label>recordId</label>
        <length>19</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Chatter Unfollow Delayed RecordId</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>recordId__c</columns>
        <columns>CriteriaMetDate__c</columns>
        <columns>ScheduledUnfollowDate__c</columns>
        <columns>DaysDelay__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Chatter Unfollow Delayed RecordId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chatter Unfollow Delayed RecordId</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>